--- a/index.html
+++ b/index.html
@@ -99,28 +99,28 @@ import {RenderPass} from 'https://threejsfundamentals.org/threejs/resources/thre
        
                 
  //   var slogan_text=["Secret Love","Don't leave me this way","Fly me to the moon","Act up","Ignorance = Fear"];
-var slogan_text=['<img src="/images/01.jpg">',
-                '<img src="/images/02.jpg">',
-                '<img src="/images/03.jpg">',
-                '<img src="/images/04.jpg">',
-                 '<img src="/images/06.jpg">',
-                '<img  src="/images/07.jpg">',
-                '<img src="/images/08.jpg">',
-                '<img src="/images/09.jpg">',
-                  '<img src="/images/10.jpg">',
-                  '<img src="/images/11.jpg">',
-                  '<img src="/images/12.jpg">',
-                  '<img src="/images/13.jpg">',
-                '<img src="/images/14.jpg">',
-                '<img src="/images/15.jpg">',
-                '<img src="/images/16.jpg">',
-                  '<img src="/images/17.jpg">',
-                  '<img src="/images/18.jpg">',
-                  '<img src="/images/19.jpg">',
-                  '<img src="/images/20.jpg">',
-                 '<img src="/images/20.jpg">',
-                 '<img src="/images/21.jpg">',
-                 '<img src="/images/22.jpg">',
+var slogan_text=['<img src="./images/01.jpg">',
+                '<img src="./images/02.jpg">',
+                '<img src="./images/03.jpg">',
+                '<img src="./images/04.jpg">',
+                 '<img src="./images/06.jpg">',
+                '<img  src="./images/07.jpg">',
+                '<img src="./images/08.jpg">',
+                '<img src="./images/09.jpg">',
+                  '<img src="./images/10.jpg">',
+                  '<img src="./images/11.jpg">',
+                  '<img src="./images/12.jpg">',
+                  '<img src="./images/13.jpg">',
+                '<img src="./images/14.jpg">',
+                '<img src="./images/15.jpg">',
+                '<img src="./images/16.jpg">',
+                  '<img src="./images/17.jpg">',
+                  '<img src="./images/18.jpg">',
+                  '<img src="./images/19.jpg">',
+                  '<img src="./images/20.jpg">',
+                 '<img src="./images/20.jpg">',
+                 '<img src="./images/21.jpg">',
+                 '<img src="./images/22.jpg">',
 
 
 
